# mcsand

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/fish/: mcsand-aliases.fish
.github/workflows/: tests.yml
src/mcsand/: __main__.py  cleanup.py  cli.py  config.py  context.py  environment.py  launcher.py  main.py  optins.py  paths.py  profile.py
src/mcsand/hooks/: __init__.py  _pathgate.py  bash_precheck.py  edit_precheck.py  glob_precheck.py  install.py  lib.py  read_precheck.py  sandbox_precheck.py  scan.py  settings.py  write_precheck.py
tests/: test_cleanup.py  test_cli.py  test_config.py  test_context.py  test_darwin.py  test_environment.py  test_launcher.py  test_optins.py  test_paths.py  test_profile.py  test_smoke.py
tests/hooks/: test_bash_gate.py  test_glob_gate.py  test_lib.py  test_path_gates.py  test_sandbox_gate.py  test_scan.py  test_settings.py
