[project]
name = "mcsand"
version = "0.1.0"
description = "Run Claude Code (or any command) under the macOS Seatbelt sandbox"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
mcsand = "mcsand.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcsand"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]
markers = [
    "darwin: behavioural tests that require macOS sandbox-exec (skipped elsewhere)",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

# Tests use pytest fixtures (tmp_path, capsys, monkeypatch) and lightweight
# fakes; full strict typing there adds noise without catching real bugs.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
check_untyped_defs = false
